# Jackal-Mocap

mocap/: CMakeLists.txt  README.md  package.xml
mocap-toolkit/: README.md  mocap_toolkit.repos
mocap-toolkit/mocap_toolkit/: CMakeLists.txt  package.xml
mocap-toolkit/mocap_toolkit/launch/: broadcast.launch  calibrate.launch
mocap/include/mocap/: GHKFilter.h  attitude_ekf.h  body.h  client.h  defines.h  mocap.h  rpc_client.h  tf2_helpers.h  utils.h
mocap/include/mocap/client/: optitrack.h  vicon.h
mocap/launch/: optitrack.launch  vicon.launch
mocap/msg/: Cameras.msg  Markers.msg  Status.msg
mocap/param/: vicon.yaml
mocap/rviz/: mocap_vis.rviz
mocap/sdk/optitrack/: optitrack_client.cpp  udp_socket.cpp
mocap/sdk/optitrack/optitrack_sdk/: optitrack_client.h  udp_socket.h
mocap/src/: GHKFilter.cpp  attitude_ekf.cpp  body.cpp  mocap.cpp  mocap_node.cpp  rpc_client.cpp  test_vicon_rpc_node.cpp
mocap/src/client/: optitrack.cpp  vicon.cpp
