<?xml version="1.0"?>
<package format="2">
  <name>mocap</name>
  <version>0.0.0</version>
  <description>Filters and ROS drivers for motion capture systems</description>

  <maintainer email="plusk@mit.edu">Parker Lusk</maintainer>
  <license>MIT</license>

  <author email="cutlerm@mit.edu">Mark Cutler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
